--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,10 +5,11 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: ${EUREKA_URL}/eureka
+      defaultZone: ${EUREKA_URL}/eureka/
 
 server:
   port: 9093
-APP_NAME:
-  reloadly-api-gateway
+spring:
+  application:
+    name: eureka-server
 
