add heroku properties

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,8 +5,9 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: ${eureka.url}/eureka/
-  url: reloadly-eureka-service.herokuapp.com
+      defaultZone: ${application.url}/eureka
+application:
+  url: https://reloadly-gate.herokuapp.com
 
 spring:
   application:
