add heroku properties

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,7 @@ eureka:
     fetchRegistry: true
     serviceUrl:
       defaultZone: ${application.url}/eureka
+    enabled: true
 application:
   url: https://reloadly-gate.herokuapp.com
 
