--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,11 @@
-eureka:
-  client:
-    service-url: ${application.eureka.url}/eureka
+---
 spring:
-  application:
-    name: api-gateway
-  cloud:
-    discovery:
-      enabled: true
-    gateway:
-      discovery:
-        locator:
-          enabled: true
-          lower-case-service-id: true
-application:
-  eureka:
-    url: { eureka-service }.herokuapp.com
-server:
-  port: 9093
-
+  profiles: peer
+eureka:
+  instance:
+    hostname: ${APP_NAME}.herokuapp.com
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: ${EUREKA_PEER_URL}/eureka/
